--- a/assets/styles/modules/variables.css
+++ b/assets/styles/modules/variables.css
@@ -1,4 +1,11 @@
 :root {
-  --color-primary: #8DBEB8;
-  --color-primary-dark: #6b7d7b;
+  --color-primary: #5ea54d;
+  --color-primary-light: #89d277;
+  --color-primary-dark: #4e883f;
+
+  --color-gray: #aaaaaa;
+  --color-gray-light: #eee;
+  --color-gray-dark: #676767;
+
+  --content-gap: 16px;
 }
