Edit colors and icon

--- a/assets/styles/modules/variables.css
+++ b/assets/styles/modules/variables.css
@@ -1,7 +1,7 @@
 :root {
-  --color-primary: #5ea54d;
-  --color-primary-light: #89d277;
-  --color-primary-dark: #4e883f;
+  --color-primary: #4da5a2;
+  --color-primary-light: #63cdc9;
+  --color-primary-dark: #377774;
 
   --color-gray: #aaaaaa;
   --color-gray-light: #eee;
