--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -5,3 +5,4 @@
 @import "./modules/buttons.css";
 @import "./modules/header.css";
 @import "./modules/newsfeed.css";
+@import "./modules/profile.css";
