--- a/assets/styles/modules/header.css
+++ b/assets/styles/modules/header.css
@@ -6,6 +6,10 @@ header {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
 }
 
 header sl-icon-button::part(base) {
