--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -6,3 +6,4 @@
 @import "./modules/header.css";
 @import "./modules/newsfeed.css";
 @import "./modules/profile.css";
+@import "./modules/settings.css";
