--- a/assets/styles/modules/newsfeed.css
+++ b/assets/styles/modules/newsfeed.css
@@ -1,9 +1,24 @@
 .newsfeed .entry {
-  border-bottom: 1px solid var(--color-gray-light);
-  padding: 8px 16px;
+  margin: 8px 16px;
+  padding: 16px;
+  border-radius: 16px;
+  background-color: var(--color-element-bg);
+}
+
+.newsfeed .header {
   display: flex;
-  flex-direction: row;
+  align-items: center;
   gap: 8px;
+}
+
+.newsfeed .header .name {
+  font-weight: 700;
+}
+
+.newsfeed .header .user-name {
+  font-size: 14px;
+  color: var(--color-gray);
+  font-weight: 400;
 }
 
 .newsfeed .entry .avatar {
@@ -15,20 +30,6 @@
   width: 100%;
 }
 
-.newsfeed .entry .content {
-  width: 85%;
-}
-
-.newsfeed .entry .content .name {
-  font-weight: 700;
-}
-
-.newsfeed .entry .content .name span {
-  font-size: 14px;
-  color: var(--color-gray);
-  font-weight: 400;
-}
-
 .newsfeed .entry .content .text {
-  margin-top: 0;
+  margin: 0;
 }
