--- a/assets/styles/modules/settings.css
+++ b/assets/styles/modules/settings.css
@@ -1,7 +1,3 @@
-#settings {
-  background-color: var(--color-gray-light);
-}
-
 .settings-list {
   padding: 0 var(--content-gap);
 }
@@ -9,11 +5,11 @@
 .settings-list .list-item {
   display: flex;
   text-decoration: none;
-  color: var(--color-black);
+  color: var(--color-text);
   padding: 16px;
   margin-bottom: 8px;
   border-radius: 16px;
-  background-color: var(--color-white);
+  background-color: var(--color-element-bg);
 
   justify-content: space-between;
   align-items: center;
