--- a/assets/styles/modules/variables.css
+++ b/assets/styles/modules/variables.css
@@ -4,16 +4,18 @@
   --color-primary-dark: #377774;
 
   --color-gray: #aaaaaa;
-  --color-gray-light: #eee;
+  --color-gray-light: #d0d0d0;
   --color-gray-dark: #676767;
 
-  --color-text: #000;
-  --color-background: #fff;
+  --color-text: #000000;
+  --color-element-bg: #fff;
+  --color-main-bg: #eeeeee;
 
   --content-gap: 16px;
 }
 
 .dark-mode {
   --color-text: #fff;
-  --color-background: rgb(20, 20, 20);
+  --color-element-bg: #303030;
+  --color-main-bg: #141414;
 }
