--- a/assets/styles/modules/header.css
+++ b/assets/styles/modules/header.css
@@ -1,4 +1,5 @@
 header {
+  height: 42px;
   padding: 4px 12px;
   background-color: var(--color-primary);
   color: #fff;
@@ -12,7 +13,8 @@ header {
   left: 0;
 }
 
-header sl-icon-button::part(base) {
+header sl-icon-button::part(base),
+header .back {
   color: #fff;
   font-size: 28px;
   margin-left: -4px;
