Add new post dialog

--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -7,3 +7,4 @@
 @import "./modules/post.css";
 @import "./modules/about-me.css";
 @import "./modules/action-list.css";
+@import "./modules/new-post.css";
