--- a/assets/styles/modules/button.css
+++ b/assets/styles/modules/button.css
@@ -2,11 +2,10 @@
   appearance: none;
   display: block;
   width: max-content;
-  padding: 0.5rem 1rem;
+  padding: 16px 24px;
   border: none;
-  border-radius: 8px;
-  font-family: 'Courier New', Courier, monospace;
-  background-color: rgb(5, 89, 5);
+  border-radius: 16px;
+  background-color: var(--color-primary);
   color: #fff;
   text-decoration: none;
   cursor: pointer;
@@ -14,7 +13,16 @@
   line-height: 1;
 }
 
+.button.round {
+  padding: 0;
+  height: 56px;
+  width: 56px;
+  border-radius: 50%;
+  font-size: 32px;
+  line-height: 0;
+}
+
 .button:hover {
   text-decoration: none;
-  background-color: rgb(27, 135, 27);
+  background-color: var(--color-primary-light);
 }
