--- a/assets/styles/modules/general.css
+++ b/assets/styles/modules/general.css
@@ -11,7 +11,12 @@ body {
   color: var(--color-text);
 }
 
-main h2 {
+main h1 {
   font-size: 24px;
+  padding: 0 var(--content-gap);
+}
+
+main h2 {
+  font-size: 20px;
   padding: 0 var(--content-gap);
 }
