--- a/assets/styles/modules/new-post.css
+++ b/assets/styles/modules/new-post.css
@@ -1,31 +1,31 @@
-#new-post-button {
+#open-post-dialog {
   position: fixed;
   bottom: 16px;
   right: 16px;
 }
 
-#new-post-dialog::part(overlay) {
+#post-dialog::part(overlay) {
   background-color: rgba(0, 0, 0, 0.75);
 }
 
-#new-post-dialog::part(panel) {
+#post-dialog::part(panel) {
   border-radius: 16px;
   background-color: var(--color-main-bg);
 }
 
-#new-post-dialog::part(title) {
+#post-dialog::part(title) {
   font-weight: 700;
 }
 
-#new-post-dialog::part(body) {
+#post-dialog::part(body) {
   padding: 4px 20px;
 }
 
-#new-post-dialog .button {
+#post-dialog .button {
   margin-left: auto;
 }
 
-#new-post-dialog textarea {
+#post-dialog textarea {
   background-color: var(--color-element-bg);
   color: var(--color-text);
   border: 0;
