--- a/assets/styles/modules/general.css
+++ b/assets/styles/modules/general.css
@@ -11,12 +11,14 @@ body {
   color: var(--color-text);
 }
 
+main {
+  padding: 0 var(--content-gap);
+}
+
 main h1 {
   font-size: 24px;
-  padding: 0 var(--content-gap);
 }
 
 main h2 {
   font-size: 20px;
-  padding: 0 var(--content-gap);
 }
