--- a/assets/styles/modules/post.css
+++ b/assets/styles/modules/post.css
@@ -1,5 +1,5 @@
 .post {
-  margin: 8px 16px;
+  margin: 8px 0;
   padding: 16px;
   border-radius: 16px;
   background-color: var(--color-element-bg);
