--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,43 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 
+@import "./modules/variables.css";
+@import "./modules/header.css";
+@import "./modules/post.css";
+@import "./modules/button.css";
+
 body {
   font-family: 'Open Sans', sans-serif;
   max-width: 430px;
   margin: 0 auto;
-  background-color: #eeeeee;
+  background-color: var(--color-main-bg);
 }
 
 main {
   padding: 0 16px;
-}
-
-.post {
-  margin: 8px 0;
-  background-color: white;
-  padding: 16px;
-  border-radius: 16px;
-}
-
-.post .header {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-.post .header img {
-  width: 15%;
-  border-radius: 50%;
-}
-
-.post .header .name {
-  font-weight: 700;
-}
-
-.post .header .user-name {
-  font-size: 14px;
-  color: #aaaaaa;
-}
-
-.post p {
-  margin-bottom: 0;
+  margin-top: 54px;
 }
